yaml-examples/deluge/deluge-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: deluge
  labels:
    app: deluge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
    spec:
      containers:
      - name: deluge
        image: ghcr.io/linuxserver/deluge
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8112
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /downloads
            name: downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: deluge
      - name: downloads
        hostPath:
          path: /mnt/share/Downloads
