yaml-examples/deluge/deluge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge
  namespace: default
spec:
  selector:
    app: deluge
  ports:
  - name: "8112"
    port: 8112
    targetPort: 8112
  - name: "58846"
    port: 58846
    targetPort: 58846
  - name: "58946"
    port: 58946
    targetPort: 58946
